fix(credibility): resurrect and upgrade credibility system end-to-end
Root cause: CredibilityService was dead code — never wired into the
classification pipeline, leaving credibilityScore permanently at 0.0
for every user on the platform.

## Bugs fixed (7 total)

1. CredibilityService never called — created CredibilityEventListener
   to subscribe to ClassificationSubmittedEvent and trigger updates.
2. credibilityScore always 0.0 — replaced with a real composite formula
   that computes a meaningful score on every classification.
3. Majority vote ignored querySpecies — all comparisons are now scoped
   to (imageId, querySpecies) pairs so 'Is this a wasp?' and 'Is this
   a bee?' on the same image are treated as independent questions.
4. No trigger when consensus shifts — three-rule event listener now
   recalculates affected users whenever consensus is reached or an
   expert classifies a pair.
5. Cohen's Kappa loaded entire table — sliding window limited to last
   50 user classifications to prevent O(n^2) memory blow-up.
6. Score unbounded — clamped to [0, 100] everywhere; fraud penalties
   can no longer push the score below 0 or above 100.
7. First classifiers unfairly penalised — pairs with fewer than N
   classifications (configurable, default 3) are excluded from the
   majority-agreement computation entirely.

## New composite score formula (0-100)

  credibilityScore = clamp(0, 100,
      (w_gold * goldAccuracy
     + w_majority * majorityAgreement
     + w_expert * normalizeKappa(cohenKappa))
    / availableWeightSum * 100
    - fraudPenaltyPoints
  )

  Default weights: gold=0.40, majority=0.35, expert=0.25
  Missing signals redistribute weight proportionally (no penalty for
  new users who have no gold or expert overlap yet).
  Starting score for new users: 50.0 (neutral, was 0.0).

## New: Malicious labeling detection

  After each credibility recomputation, if a user's score drops below
  the configured threshold (default 15.0) after accumulating at l